# exo-eda

./: .gitignore  README.md  environment.yml  exo-eda.ipynb  exo-eda_base.ipynb  habitable_zone.py  pyproject.toml  requirements.txt  zerotopandas-course-project.ipynb
