[tool.poetry]
name = "exo-eda"
version = "0.1.0"
description = ""
authors = ["charitarthchugh <37895518+charitarthchugh@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.9"
numpy = "^1.23.0"
pyvo = "^1.3"
pandas = "^1.4.3"
scipy = {version = "^1.8.1", python = "39"}
jovian = "^0.2.41"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
